# lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LENS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.py
.github/workflows/: ci.yml
constraints/: composer.py  library.json
docs/: CONSTRAINTS.md  TOPOLOGIES.md
examples/: quickstart.py
integrations/: miner.py
meta/: analytics.py
output/: formatter.py
personas/templates/: critical-journalist.json  cto-scettico.json  cto-skeptic.json  early-adopter.json  end-user.json  giornalista-critico.json  regolatore.json  regulator.json  utente-finale.json
research/: THEORETICAL_FOUNDATIONS.md
scripts/: gen_banner.py  gen_docs.py
skills/lens/: SKILL.md
skills/lens-adversarial/: SKILL.md
skills/lens-assumptions/: SKILL.md
skills/lens-deep/: SKILL.md
skills/lens-deep/evals/: evals.json
skills/lens-focus-group/: SKILL.md
skills/lens-perspective/: SKILL.md
skills/lens-premortem/: SKILL.md
skills/lens-scenarios/: SKILL.md
skills/lens-steelman/: SKILL.md
skills/lens/evals/: evals.json
tests/: test_integrity.py  test_security.py  test_server.py
topologies/: definitions.json
